# chagall

./: CHANGELOG.md  chagal.cabal  chagall.cabal  colors.cabal  hie.yaml  readme.md
src/ColorSpace/: Cylindrical.hs  JzAzBz.hs  Lab.hs  Luv.hs  Oklab.hs  RGB.hs  XYZ.hs
src/ColorSpace/RGB/: HSL.hs  HSV.hs  HWB.hs  SRGB.hs  Space.hs
