cabal-version:      3.0
name:               chagall
version:            0.1.0.0
synopsis:

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            NONE
author:             lancekmyers
maintainer:         lancekmyers@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:  
        ColorSpace.XYZ, ColorSpace.Lab, ColorSpace.Luv, ColorSpace.RGB, 
        ColorSpace.JzAzBz, ColorSpace.Oklab, ColorSpace.Cylindrical, 
        ColorSpace.RGB.Space, ColorSpace.RGB.SRGB, 
        ColorSpace.RGB.HSL, ColorSpace.RGB.HSV, ColorSpace.RGB.HWB


    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.16.1.0, optics-core, 
        lowlin
    hs-source-dirs:   src
    default-language: GHC2021
